# BasicSDLProject

./: CMakeLists.txt  main.cpp
